<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Organizacion">Identifica la organización</string>
    <string name="noEncuentraOrganizacionPregunta">¿No encuentra la organización?</string>
    <string name="especificaPeriodoMensaje">Indica el período en que estuviste vinculado</string>
    <string name="fechaInicioPeriodo">Fecha inicio</string>
    <string name="fechaFinPeriodoST">Fecha Fin</string>
    <string name="title_activity_bienvenida">BienvenidaActivity</string>
    <string name="ingresarBTN">Ingresar</string>
    <string name="registrarseBTN">Registrarse</string>
    <string name="eslogan">JANITA. Registra y valida tu vida profesional.</string>
    <string name="title_activity_administrar_periodos">Períodos</string>
    <string name="title_activity_detalle_registro_laboral"></string>
    <string name="fechaCracion">Fecha de creación</string>
    <string name="estado">Estado</string>
    <string name="numeroPeriodosLaboralesLBL">Número periódos laborales</string>
    <string name="title_activity_detalle_validacion">DetalleValidacionActivity</string>
    <string name="TipoLBLTV">Tipo</string>
    <string name="fechaValidacionLBLTV">Fecha de validación</string>
    <string name="numeroPeriodosValidadosLBLTXT">Número periódos validados</string>
    <string name="separadorFechas">hasta</string>
    <string name="duracionLBL">Duración</string>
    <string name="organizacionNoExisteLTV">No encuentro la organización!</string>
    <string name="cargoLBL">Indica el cargo o actividad desempeñada.</string>
    <string name="noEncuentraCargo">No encuntro el cargo!</string>
    <string name="registrarPeriodoBTN">Registrar período!</string>
    <string name="nombreOrganizacion">Nombre de la organización</string>
    <string name="nitOrganizacion">NIT</string>
    <string name="title_activity_buscar_empresa_inexistente">BuscarEmpresaInexistenteActivity
    </string>
    <string name="tituloValidacionEmpleador">Empleador</string>
    <string name="title_activity_registro_laboral_detallado">registroLaboralDetallado</string>
    <string name="tipoValidacion">Tipo de validación</string>
    <string name="estadoValidacion">Estado</string>
    <string name="fechaValidacion">Fecha validación</string>
    <string name="periodoValidado">Período validado</string>
    <string name="idValidacion">ID</string>
    <string name="observaciones">Observaciones</string>
</resources>
